--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ authors = ["Lucas Helfstein <lucas.helfstein@idwall.co>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-scikit-learn = "^1.3.0"
-pandas = "^2.1.0"
+python = ">=3.8,<3.12"
+scikit-learn = "<1.3.0"
+pandas = "<2.1.0"
 seaborn = "^0.12.2"
 notebook = "^7.0.3"
 black = "^23.9.1"
+kaleido = "0.2.1"
+pycaret = "3.0.0"
+mlflow = "^2.7.0"
 
 
 [build-system]
