--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,16 @@ authors = ["Lucas Helfstein <lucas.helfstein@idwall.co>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
-scikit-learn = "<1.3.0"
-pandas = "<2.1.0"
+python = ">=3.10,<3.12"
+scikit-learn = "<1.4.1"
+pandas = "^2.2.1"
 seaborn = "^0.12.2"
 notebook = "^7.0.3"
 black = "^23.9.1"
 kaleido = "0.2.1"
-pycaret = "3.0.0"
 mlflow = "^2.7.0"
 schemdraw = "<0.16"
-river = "0.15.0"
+tqdm = "^4.66.2"
 
 
 [build-system]
