--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "drifts"
 version = "0.1.0"
 description = "Package for working with concept drifts in different scenarios."
-authors = ["Lucas Helfstein <lucas.helfstein@idwall.co>"]
+authors = ["Lucas Helfstein <lucashelfs@ime.usp.br>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -17,6 +17,7 @@ pycaret = "3.0.0"
 mlflow = "^2.7.0"
 schemdraw = "<0.16"
 river = "0.15.0"
+imageio = "^2.34.0"
 
 
 [build-system]
