--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.12"
 scikit-learn = "<1.4.1"
 pandas = "^2.2.1"
-seaborn = "^0.12.2"
+seaborn = "0.13.2"
 notebook = "^7.0.3"
 black = "^23.9.1"
 kaleido = "0.2.1"
@@ -17,6 +17,9 @@ mlflow = "^2.7.0"
 schemdraw = "<0.16"
 tqdm = "^4.66.2"
 river = "^0.21.0"
+menelaus = "^0.2.0"
+plotly = "^5.20.0"
+imageio = "^2.34.0"
 
 
 [build-system]
